[gd_scene load_steps=5 format=3 uid="uid://ddqmt1es482ab"]

[ext_resource type="Script" uid="uid://dgc4nyae3uqd1" path="res://Scripts/sword_swing.gd" id="1_mk3p0"]
[ext_resource type="Texture2D" uid="uid://dfyi1s5tmt3cj" path="res://Assets/tileset.png" id="2_a0av8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a0av8"]
size = Vector2(3, 3)

[sub_resource type="AtlasTexture" id="AtlasTexture_a0av8"]
atlas = ExtResource("2_a0av8")
region = Rect2(24, 32, 8, 8)

[node name="SwordSwing" type="Area2D"]
script = ExtResource("1_mk3p0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2.5, -2.5)
shape = SubResource("RectangleShape2D_a0av8")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = SubResource("AtlasTexture_a0av8")

[node name="HeavyAttackTimer" type="Timer" parent="."]

[node name="HeavyAttackChargeTimer" type="Timer" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="HeavyAttackTimer" to="." method="_on_heavy_attack_timer_timeout"]
[connection signal="timeout" from="HeavyAttackChargeTimer" to="." method="_on_heavy_attack_charge_timer_timeout"]
